--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,9 +28,29 @@
     <string name="settings">Ustawienia</string>
     <string name="useTemplate">Użyj szablonu</string>
     <string name="addList">Utwórz nową listę</string>
+    <string name="newProductToList">Nowy produkt</string>
 
     <!--PARSE SERVER CONFIG VALUES:-->
     <string name="parse_server_url">http://94.23.7.172:9652/parsesl/</string>
     <string name="parse_app_id">R3J9pslx57inrTP8IEUIykY</string>
+
+        <string-array name="product_categories">
+            <item>Pieczywo</item>
+            <item>Nabiał</item>
+            <item>Warzywa i owoce</item>
+            <item>Mrożonki</item>
+            <item>Napoje</item>
+            <item>Chemia</item>
+            <item>Dla dzieci</item>
+            <item>Dla zwierząt</item>
+            <item>RTV/AGD</item>
+        </string-array>
+
+    <string-array name="product_measure">
+        <item>Kilogramy</item>
+        <item>Gramy</item>
+        <item>Sztuki</item>
+        <item>Litry</item>
+    </string-array>
 
 </resources>
