created adding templates changed layout of adding product deleted AddTemplate.java

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,6 +43,7 @@
     <string name="customUserProducts">PRODUKTY UŻYTKOWNIKA</string>
     <string name="save">Zapisz</string>
     <string name="cancel">Anuluj</string>
+    <string name="addTemplate">Dodaj szablon</string>
 
     <!--CATEGORIES:-->
     <string-array name="product_categories">
