--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="menuMainScreen">MyEngineer</string>
     <string name="menuRegister">Zarejestruj się</string>
     <string name="menuLists">TWOJE LISTY</string>
-    <string name="zaloguj">Zaloguj się</string>
+    <string name="login">Zaloguj się</string>
     <string name="open">Open</string>
     <string name="close">Close</string>
     <string name="friends">Znajomi</string>
@@ -42,6 +42,7 @@
     <string name="clear">Wyczyść</string>
     <string name="customUserProducts">PRODUKTY UŻYTKOWNIKA</string>
     <string name="save">Zapisz</string>
+    <string name="ok">OK</string>
     <string name="cancel">Anuluj</string>
     <string name="addTemplate">Dodaj szablon</string>
 
@@ -82,8 +83,5 @@
         <item>Puszka</item>
         <item>Sztuki</item>
     </string-array>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
