--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,6 +45,14 @@
     <string name="cancel">Anuluj</string>
     <string name="addTemplate">Dodaj szablon</string>
     <string name="never">nigdy</string>
+    <string name="empty_conversation">Zacznij konwersację!</string>
+    <string name="enter_message">Wprowadź wiadomość</string>
+    <string name="send">WYŚLIJ</string>
+    <string name="no_results">Brak wyników</string>
+    <string name="username">Nazwa użytkownika</string>
+    <string name="conversation_with">Rozmowa z</string>
+    <string name="minutes_ago">minut temu</string>
+    <string name="couldnt_load_messages">Nie udało się załadować wiadomości!</string>
 
     <!--CATEGORIES:-->
     <string-array name="product_categories">
