Fix n+1, implement lastActiveAt time updating, use Parse Bolts Tasks

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,6 +44,7 @@
     <string name="ok">OK</string>
     <string name="cancel">Anuluj</string>
     <string name="addTemplate">Dodaj szablon</string>
+    <string name="never">nigdy</string>
 
     <!--CATEGORIES:-->
     <string-array name="product_categories">
