--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,6 +61,9 @@
     <string name="email_taken">E-mail jest już zajęty</string>
     <string name="login_taken">Login jest już zajęty</string>
     <string name="login_missing">Login nie może być pusty</string>
+    <string name="passwords_dont_match">Podane hasła muszą być takie same</string>
+    <string name="login_too_short">Login musi mieć co najmniej 4 znaki</string>
+    <string name="pwd_too_short_or_same_as_login">Hasło musi mieć co najmniej 6 znaków i być inne niż login</string>
 
     <!--CATEGORIES:-->
     <string-array name="product_categories">
