--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,6 +65,8 @@
     <string name="login_too_short">Login musi mieć co najmniej 4 znaki</string>
     <string name="pwd_too_short_or_same_as_login">Hasło musi mieć co najmniej 6 znaków i być inne niż login</string>
     <string name="not_logged_in">niezalogowany</string>
+    <string name="no_friends">Nie masz jeszcze znajomych.</string>
+    <string name="no_invites">Nie masz żadnych zaproszeń.</string>
 
     <!--CATEGORIES:-->
     <string-array name="product_categories">
